--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
         <activity android:name=".Controlador.ActualizarPssUsuario"
             android:theme="@style/AppTheme">
         </activity>
+        <activity android:name=".Vista.VerEmails"
+            android:theme="@style/EmailsStyle">
+        </activity>
     </application>
 
 </manifest>
