--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,29 +4,28 @@
     package="com.jaax.edsa">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vista.SplashScreen"
+        <activity android:name=".controlador.SplashScreen"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controlador.MainActivity"
+        <activity android:name=".controlador.LoginUsuario"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
-        <activity android:name=".controlador.RegistrarUsuario"
+        <activity android:name=".controlador.AddUsuario"
             android:theme="@style/AppTheme">
         </activity>
         <activity android:name=".controlador.ActualizarPssUsuario"
             android:theme="@style/AppTheme">
         </activity>
-        <activity android:name=".vista.VerEmails"
+        <activity android:name=".controlador.VerEmails"
             android:theme="@style/EmailsStyle">
         </activity>
         <activity android:name=".vista.Introduccion"
