--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jaax.edsa">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,7 +27,10 @@
             android:theme="@style/AppTheme">
         </activity>
         <activity android:name=".controlador.VerEmails"
-            android:theme="@style/EmailsStyle">
+            android:theme="@style/EmailsStyle"
+            android:allowEmbedded="true"
+            android:documentLaunchMode="always"
+            android:resizeableActivity="true">
         </activity>
         <activity android:name=".vista.Introduccion"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
