--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation ('com.google.apis:google-api-services-drive:v3-rev136-1.25.0'){
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation ('com.google.api-client:google-api-client-android:1.26.0'){
+        exclude group: 'org.apache.httpcomponents'
+    }
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
