pruebas iniciales con dagger2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,14 +3,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jaax.edsa">
 
-<<<<<<< HEAD
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-=======
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
->>>>>>> devjaax
     <application
+        android:name=".controlador.App"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
