--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.jaax.edsa"
@@ -39,7 +40,9 @@ dependencies {
     implementation ('com.google.api-client:google-api-client-android:1.26.0'){
         exclude group: 'org.apache.httpcomponents'
     }
-    testImplementation 'junit:junit:4.12'
+    implementation 'com.google.dagger:dagger-android:2.15'
+    kapt 'com.google.dagger:dagger-compiler:2.15'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
