--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,14 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-ads:19.7.0'
     implementation ('com.google.apis:google-api-services-drive:v3-rev136-1.25.0'){
         exclude group: 'org.apache.httpcomponents'
     }
     implementation ('com.google.api-client:google-api-client-android:1.26.0'){
         exclude group: 'org.apache.httpcomponents'
     }
-    implementation 'com.google.dagger:dagger-android:2.15'
-    kapt 'com.google.dagger:dagger-compiler:2.15'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
