--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
         <activity
-            android:name=".AddUsuario"
+            android:name=".ui.AddUser"
             android:screenOrientation="fullSensor"
             android:theme="@style/AppTheme">
         </activity>
